# AlMe

./: wymagania.txt
L1/: .~lock.resultAnalysis.ods#  2_opt.cpp  2_opt.h  3_opt.cpp  3_opt.h  CMakeLists.txt  genAlgo.cpp  genAlgo.h  genAlgoTester.cpp  genAlgoTester.h  k_random.cpp  k_random.h  main.cpp  parser.cpp  parser.h  random_generator.cpp  random_generator.h  resultAnalysis.ods  roadSolver.cpp  roadSolver.h  tabu_multithreaded_wrapper.cpp  tabu_multithreaded_wrapper.h  tabu_search.cpp  tabu_search.h  tabu_tester.cpp  tabu_tester.h  testNeigh.txt  tester.cpp  tester.h  visualizer.cpp  visualizer.h  wymagania.txt
L1/LaTeX/: Sprawko.tex
L1/LaTeX/Sprawko_Genetyk/: Sprawko_Genetyk.aux  Sprawko_Genetyk.tex
L1/LaTeX/Sprawko_TABU/: Sprawko_TABU.tex
L1/Tests/: kRandExample.ods  kRand_a280.txt  krandData.txt  mass01test.txt  mass02test.txt  mass12test.txt  mass22test.txt  mass23test.txt  massAnalysis.ods  massBranchTest.txt  massNeighborParallelTest.txt  massNeightest.txt  massParallelTest.txt  test00.txt  test01.txt  test02.txt  test12.txt  test22.txt  wymagania.txt
L1/Tests/GenTests/: age_analysis.ods  age_asim_443.txt  age_asim_71.txt  age_sim_439.txt  age_sim_70.txt  asim_100.txt  asim_171.txt  asim_323.txt  asim_358.txt  asim_443.txt  asim_56.txt  asim_65.txt  asim_70.txt  asim_71.txt  asimetricI.1.ods  asimetricI.2.ods  asimetricI.ods  islands.txt  le_analysis.ods  le_asim_443.txt  le_asim_71.txt  le_sim_439.txt  le_sim_70.txt  par1_asim_443.txt  par1_asim_71.txt  par1_sim_439.txt  par1_sim_70.txt  par2_asim_443.txt  par2_asim_71.txt  par2_sim_439.txt  par2_sim_70.txt  parSeek439Sim.ods  parSeek443Asim.ods  (+15 more)
(+6 files in other folders)
